--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>Frontend Mentor | 3-column preview card component</title>
   </head>
@@ -60,7 +61,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Gabriela de Paula</a>.
+      >. Coded by <a href="https://github.com/PaulaR-05">Gabriela de Paula</a>.
     </footer>
   </body>
 </html>
