--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   </head>
   <body>
     <main>
+      <h1>Frontend Mentor | 3-column preview card component</h1>
       <div class="card-01">
         <img src="./images/icon-sedans.svg" alt="" />
-        <h1>Sedans</h1>
+        <h2>Sedans</h2>
         <p>
           Choose a sedan for its affordability and excellent fuel economy. Ideal
           for cruising in the city or on your next road trip.
@@ -40,7 +41,7 @@
       </div>
       <div class="card-02">
         <img src="./images/icon-suvs.svg" alt="" />
-        <h1>SUVS</h1>
+        <h2>SUVS</h2>
         <p>
           Take an SUV for its spacious interior, power, and versatility. Perfect
           for your next family vacation and off-road adventures.
@@ -49,7 +50,7 @@
       </div>
       <div class="card-03">
         <img src="./images/icon-luxury.svg" alt="" />
-        <h1>Luxury</h1>
+        <h2>Luxury</h2>
         <p>
           Cruise in the best car brands without the bloated prices. Enjoy the
           enhanced comfort of a luxury rental and arrive in style.
